--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-recorded-history",
   "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "description": "A service to read the past and future entries of a user's history within your app",
   "keywords": [
     "ember-addon"
   ],
